添加显示国际化选择器

--- a/templates/includes/footer.ejs
+++ b/templates/includes/footer.ejs
@@ -50,7 +50,7 @@
         <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8"/>
 
         <!-- 底部版权和社交链接 -->
-        <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-4">
+        <div class="flex flex-col items-center sm:flex-row sm:items-center justify-between gap-4">
             <span class="text-sm text-gray-500 dark:text-gray-400">
                 <%= locals.footer && locals.footer.copyright %>
             </span>
