--- a/templates/includes/sidebar.ejs
+++ b/templates/includes/sidebar.ejs
@@ -32,13 +32,13 @@ sidebar = nav.find(item => {
                            class="group block">
                             <div class="relative flex items-center px-2 sm:px-3 md:px-4 py-1.5 sm:py-2
                                         <%=
-                                isActive(item.href)
-                                        ? 'text-blue-600 dark:text-blue-400 bg-blue-50/80 dark:bg-blue-900/20 font-medium'
-                                        : 'hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800/40'
-                            %>
+                                            isActive(item.href)
+                                                    ? 'text-blue-600 dark:text-blue-400 bg-blue-50/80 dark:bg-blue-900/20 font-medium'
+                                                    : 'hover:text-gray-900 dark:hover:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-800/40'
+                                        %>
                                        rounded-md transition-all duration-200 ease-in-out">
 
-                                <% if (item.icon) { %>
+                                <% if (locals.config.feature?.lucide?.enable && item.icon) { %>
                                     <span class="inline-flex mr-1 sm:mr-2 text-gray-500 dark:text-gray-400 transition-colors duration-200">
                                        <!-- 骨架屏 -->
                                        <div class="w-3 h-3 sm:w-4 sm:h-4 animate-pulse bg-gray-200 dark:bg-gray-700 rounded"></div>
@@ -48,9 +48,9 @@ sidebar = nav.find(item => {
                                           style="display: none;"
                                           class="w-3 h-3 sm:w-4 sm:h-4
                                                <%= isActive(item.href)
-                                                  ? 'text-blue-600 dark:text-blue-400'
-                                                  : 'group-hover:text-gray-900 dark:group-hover:text-gray-200'
-                                          %>">
+                                                      ? 'text-blue-600 dark:text-blue-400'
+                                                      : 'group-hover:text-gray-900 dark:group-hover:text-gray-200'
+                                               %>">
                                        </i>
                                    </span>
                                 <% } %>
