--- a/templates/includes/header.ejs
+++ b/templates/includes/header.ejs
@@ -35,7 +35,7 @@ function isPathInNavItem(currentPath, navItem) {
                 <div class="flex items-center justify-between flex-1 lg:flex-none">
                     <div class="flex items-center space-x-4 shrink-0">
                         <% if (site.logo) { %>
-                            <a href="/" class="flex items-center">
+                            <a href="<%= page.language ? `/${page.language}` : '/' %>" class="flex items-center">
                                 <img src="<%= basePath %>/<%= site.logo || '/assets/logo.svg' %>"
                                      alt="<%= site.title %>"
                                      class="h-10 w-auto object-contain transition-transform hover:scale-105">
