--- a/templates/includes/nav.ejs
+++ b/templates/includes/nav.ejs
@@ -4,10 +4,8 @@
             <% if (typeof nav !== 'undefined' && Array.isArray(nav)) { %>
                 <% nav.forEach(function(item) { %>
                     <li>
-                        <a
-                                href="<%= item.url %>"
-                                class="text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white transition-colors duration-200 font-medium"
-                        >
+                        <a href="<%= item.url %>"
+                                class="text-gray-600 dark:text-gray-300 hover:text-gray-900 dark:hover:text-white transition-colors duration-200 font-medium">
                             <%= item.text %>
                         </a>
                     </li>
