--- a/templates/includes/repo.ejs
+++ b/templates/includes/repo.ejs
@@ -1,6 +1,6 @@
-<% if (locals.repo) { %>
+<% if (locals.siteData.repo) { %>
     <div class="hidden lg:flex items-center space-x-4 text-sm" id="github-stats-desktop">
-        <a href="<%= repo.url %>"
+        <a href="<%= siteData.repo.url %>"
            target="_blank"
            rel="noopener noreferrer"
            class="inline-flex items-center gap-3 text-gray-600 hover:text-gray-500 transition-colors">
@@ -11,7 +11,7 @@
             </div>
             <div class="inline-flex flex-col items-center gap-0.5">
                 <div class="inline-flex items-center gap-1">
-                    <%= repo.owner %>/<%= repo.name %>
+                    <%= siteData.repo.owner %>/<%= siteData.repo.name %>
                 </div>
                 <div class="space-x-2" id="repo-stats">
                     <!-- 初始显示配置的值 -->
@@ -19,19 +19,19 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
                             <path d="M1 7.775V2.75C1 1.784 1.784 1 2.75 1h5.025c.464 0 .91.184 1.238.513l6.25 6.25a1.75 1.75 0 0 1 0 2.474l-5.026 5.026a1.75 1.75 0 0 1-2.474 0l-6.25-6.25A1.75 1.75 0 0 1 1 7.775Zm1.5 0c0 .066.026.13.073.177l6.25 6.25a.25.25 0 0 0 .354 0l5.025-5.025a.25.25 0 0 0 0-.354l-6.25-6.25a.25.25 0 0 0-.177-.073H2.75a.25.25 0 0 0-.25.25ZM6 5a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z"></path>
                         </svg>
-                        <%= repo.tag %>
+                        <%= siteData.repo.tag %>
                     </div>
                     <div class="inline-flex items-center gap-1 stars-container">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
                             <path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Z"/>
                         </svg>
-                        <%= repo.stars %>
+                        <%= siteData.repo.stars %>
                     </div>
                     <div class="inline-flex items-center gap-1 forks-container">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
                             <path d="M5 5.372v.878c0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75v-.878a2.25 2.25 0 1 1 1.5 0v.878a2.25 2.25 0 0 1-2.25 2.25h-1.5v2.128a2.251 2.251 0 1 1-1.5 0V8.5h-1.5A2.25 2.25 0 0 1 3.5 6.25v-.878a2.25 2.25 0 1 1 1.5 0ZM5 3.25a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Zm6.75.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm-3 8.75a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"/>
                         </svg>
-                        <%= repo.forks %>
+                        <%= siteData.repo.forks %>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
 
     <!-- 移动端仓库信息 -->
     <div class="lg:hidden px-3 py-2" id="github-stats-mobile">
-        <a href="<%= repo.url %>"
+        <a href="<%= siteData.repo.url %>"
            target="_blank"
            rel="noopener noreferrer"
            class="flex items-center gap-3 text-gray-600 hover:text-gray-500 transition-colors">
@@ -51,26 +51,26 @@
             </div>
             <div class="flex flex-col gap-1">
                 <div class="flex items-center">
-                    <%= repo.owner %>/<%= repo.name %>
+                    <%= siteData.repo.owner %>/<%= siteData.repo.name %>
                 </div>
                 <div class="flex flex-wrap gap-3" id="repo-stats-mobile">
                     <div class="flex items-center gap-1 tag-container">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
                             <path d="M1 7.775V2.75C1 1.784 1.784 1 2.75 1h5.025c.464 0 .91.184 1.238.513l6.25 6.25a1.75 1.75 0 0 1 0 2.474l-5.026 5.026a1.75 1.75 0 0 1-2.474 0l-6.25-6.25A1.75 1.75 0 0 1 1 7.775Zm1.5 0c0 .066.026.13.073.177l6.25 6.25a.25.25 0 0 0 .354 0l5.025-5.025a.25.25 0 0 0 0-.354l-6.25-6.25a.25.25 0 0 0-.177-.073H2.75a.25.25 0 0 0-.25.25ZM6 5a1 1 0 1 1 0 2 1 1 0 0 1 0-2Z"></path>
                         </svg>
-                        <%= repo.tag %>
+                        <%= siteData.repo.tag %>
                     </div>
                     <div class="flex items-center gap-1 stars-container">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
                             <path d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Z"/>
                         </svg>
-                        <%= repo.stars %>
+                        <%= siteData.repo.stars %>
                     </div>
                     <div class="flex items-center gap-1 forks-container">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="currentColor">
                             <path d="M5 5.372v.878c0 .414.336.75.75.75h4.5a.75.75 0 0 0 .75-.75v-.878a2.25 2.25 0 1 1 1.5 0v.878a2.25 2.25 0 0 1-2.25 2.25h-1.5v2.128a2.251 2.251 0 1 1-1.5 0V8.5h-1.5A2.25 2.25 0 0 1 3.5 6.25v-.878a2.25 2.25 0 1 1 1.5 0ZM5 3.25a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Zm6.75.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm-3 8.75a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"/>
                         </svg>
-                        <%= repo.forks %>
+                        <%= siteData.repo.forks %>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
         document.addEventListener('DOMContentLoaded', function () {
             if (window.PageForge && window.PageForge.GitHubStats) {
                 // 同时初始化桌面端和移动端
-                window.PageForge.GitHubStats.init('<%= repo.owner %>', '<%= repo.name %>', {
+                window.PageForge.GitHubStats.init('<%= locals.siteData.repo.owner %>', '<%= locals.siteData.repo.name %>', {
                     desktopStatsId: 'repo-stats',
                     mobileStatsId: 'repo-stats-mobile'  // 添加移动端容器ID
                 });
